// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab组件 快照测试 基本使用 1`] = `
<div
  className="TestWrapper__Container-wrvnwl-0 edoXsR"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 duQnQO sinoui-fab"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 指定不同颜色 1`] = `
<div
  className="TestWrapper__Container-wrvnwl-0 edoXsR"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 duQnQO sinoui-fab"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 liqZnq sinoui-fab"
    color="secondary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 fNnjdx sinoui-fab"
    color="error"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 jKNmTy sinoui-fab"
    color="warning"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 ihhapg sinoui-fab"
    color="info"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 bINHli sinoui-fab"
    color="success"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 hpXHmk sinoui-fab"
    color="actionActive"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 feddyI sinoui-fab"
    color="actionDisabled"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置不可用状态 1`] = `
<div
  className="TestWrapper__Container-wrvnwl-0 edoXsR"
>
  <button
    aria-disabled={true}
    className="BaseButton__BaseButtonLayout-wk8p17-0 bqhbKI sinoui-base-button Fab-egtp6t-0 duQnQO sinoui-fab sinoui-fab--disabled"
    color="primary"
    disabled={true}
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置扩展样式 1`] = `
<div
  className="TestWrapper__Container-wrvnwl-0 edoXsR"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 esupeo sinoui-fab sinoui-fab--extended"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置较小显示 1`] = `
<div
  className="TestWrapper__Container-wrvnwl-0 edoXsR"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Fab-egtp6t-0 kGRkgy sinoui-fab sinoui-fab--mini"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;
